IGNITE-21569 added spotbugs tool for static code analysis