@@ -32,6 +32,7 @@ import static org.mockserver.model.HttpStatusCode.OK_200;
 import static org.mockserver.model.JsonBody.json;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import org.junit.jupiter.api.BeforeEach;
@@ -283,7 +284,7 @@ public class IgniteCliInterfaceTest extends AbstractCliTest {
         void initWithAuthenticationSuccess() throws IOException {
 
             Path clusterConfigurationFile = copyResourceToTempFile("cluster-configuration-with-enabled-auth.conf").toPath();
-            String clusterConfiguration = new String(Files.readAllBytes(clusterConfigurationFile));
+            String clusterConfiguration = Files.readString(clusterConfigurationFile);
 
             var expectedSentContent = "{\n"
                     + "  \"metaStorageNodes\": [\n"
